# CS61Cfa20

lab01/: CMakeLists.txt  eccentric.c  gdb.txt  hello.c  ll_cycle.c
lab02/: CMakeLists.txt  Makefile  bit_ops  bit_ops.c  lfsr  lfsr.c  make.txt  vector-test  vector.c
lab03/: cc_test.s  ex2.s  factorial.s
